--- a/src/React.Core/packages.config
+++ b/src/React.Core/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="JavaScriptEngineSwitcher.Core" version="1.2.4" targetFramework="net4" />
-  <package id="JavaScriptEngineSwitcher.V8" version="1.4.1" targetFramework="net40" />
-  <package id="JSPool" version="0.3.1" targetFramework="net4" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net4" />
+  <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="JavaScriptEngineSwitcher.Core" version="3.3.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="JavaScriptEngineSwitcher.V8" version="3.13.3" targetFramework="net472" />
+  <package id="JSPool" version="4.0.0" targetFramework="net472" />
+  <package id="Microsoft.ClearScript.Core" version="7.1.7" targetFramework="net472" />
+  <package id="Microsoft.ClearScript.V8" version="7.1.7" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" requireReinstallation="true" />
+  <package id="PolyfillsForOldDotNet.System.Threading" version="0.1.1" targetFramework="net40" />
 </packages>
