--- a/src/React.Web/packages.config
+++ b/src/React.Web/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="JavaScriptEngineSwitcher.Core" version="1.2.4" targetFramework="net40" />
+  <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="JavaScriptEngineSwitcher.Core" version="3.3.0" targetFramework="net40" requireReinstallation="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" requireReinstallation="true" />
+  <package id="PolyfillsForOldDotNet.System.Threading" version="0.1.1" targetFramework="net40" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net40" />
 </packages>
